# rules_fawltydeps

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  requirements.in  requirements.txt  requirements_lock.txt
.bcr/: metadata.template.json  presubmit.yml  source.template.json  source.tpl.json
.github/: release.yml
.github/workflows/: ci.bazelrc  ci.yml  release.yaml  release_dryrun.yaml  release_prep.sh
docs/: BUILD.bazel  fawltydeps_extension.md
e2e/bzlmod/: .bazelrc  MODULE.bazel  requirements.txt
e2e/bzlmod/app/: BUILD.bazel  greeting.py  main.py
examples/: BUILD.bazel  caching_test_runner.sh
examples/simple/: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  hello.py  lib.py  requirements.in  requirements.txt
examples/simple/client/: BUILD.bazel  client.py  sidequest.py
examples/simple/libs/: BUILD.bazel  db.py
examples/simple/libs/templates/: index.html
examples/simple/server/: BUILD.bazel  server.py
fawltydeps/: BUILD.bazel  convert_manifest.py  defs.bzl
fawltydeps/extensions/: BUILD.bazel  BUILD.tpl.bazel  convert_manifest.tpl.py  defs.tpl.bzl  fawltydeps.bzl  fawltydeps_wrapper.tpl.py
fawltydeps/private/config/: BUILD.bazel  defs.bzl
fawltydeps/private/release/: BUILD.bazel  defs.bzl
fawltydeps/private/release/bcr/: BUILD.bazel
fawltydeps/private/release/distdir/: BUILD.bazel
fawltydeps/private/release/gazelle_plugin/: BUILD.bazel  all_files.go  release_files_updated.bzl
fawltydeps/private/release/gazelle_plugin/cmd/update_release_files/: BUILD.bazel  main.go
fawltydeps/private/release/lockfile/: BUILD.bazel  lockfile.go
fawltydeps/private/release/release_notes/: BUILD.bazel  release_notes.go
fawltydeps/private/release/source_files/: BUILD.bazel
util/: BUILD.bazel
