"""Root BUILD file for rules_fawltydeps."""

exports_files([
    "MODULE.bazel",
    "requirements.txt",
    ".bcr/metadata.tpl.json",
])

# gazelle:prefix github.com/tweag/rules_fawltydeps

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "requirements.txt",
    ],
    visibility = ["//fawltydeps/private/release:__subpackages__"],
)
