"""rules_fawltydeps - Bazel rules for FawltyDeps"""

module(
    name = "rules_fawltydeps",
    version = "0.1.0",
)

# Python dependency for running fawltydeps
bazel_dep(name = "rules_python", version = "1.6.3")

# For integration tests runner
bazel_dep(name = "rules_shell", version = "0.6.1")

# rules_python gazelle to reuse their manifests generation
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "rules_go", version = "0.59.0")  # rules_python gazelle dep fix for bazel 9.x

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)

# pip dependencies for fawltydeps
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "fawltydeps_pip",
    python_version = "3.10",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "fawltydeps_pip")

# Integration tests on example repos
bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.34.0",
    dev_dependency = True,
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
bazel_binaries.download(version = "7.x")
bazel_binaries.download(version = "8.x")
bazel_binaries.download(version = "last_green")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_.bazelversion",
    "build_bazel_bazel_7_x",
    "build_bazel_bazel_8_x",
    "build_bazel_bazel_last_green",
)
