load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "bazel_integration_tests",
    "default_test_runner",
    "integration_test_utils",
)

# Declare a test runner to drive the integration tests.
default_test_runner(
    name = "simple_test_runner",
)

# If you only want to execute against a single version of Bazel, use
# bazel_integration_test.
bazel_integration_test(
    name = "simple_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    test_runner = ":simple_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("simple") + [
        "//:local_repository_files",
    ],
    workspace_path = "simple",
)

## If you want to execute an integration test using multiple versions of Bazel,
## use bazel_integration_tests. It will generate multiple integration test
## targets with names derived from the base name and the bazel version.
#bazel_integration_tests(
#    name = "simple_test",
#    bazel_binaries = bazel_binaries,
#    bazel_versions = bazel_binaries.versions.other,
#    test_runner = ":simple_test_runner",
#    workspace_path = "simple",
#)

