"""Example BUILD file demonstrating FawltyDeps rules."""

load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_fawltydeps//fawltydeps:defs.bzl", "fawltydeps_check")

py_library(
    name = "lib",
    srcs = ["lib.py"],
    # deps = [
    #     # Add external dependencies here
    # ],
)

py_binary(
    name = "hello",
    srcs = ["hello.py"],
    deps = [
        ":lib",
    ],
)

# FawltyDeps check for the library
fawltydeps_check(
    name = "lib_deps_check",
    target = ":lib",
)

# FawltyDeps check for the binary
fawltydeps_check(
    name = "hello_deps_check",
    target = ":hello",
)
