module(
    name = "toy_bazel_python_app",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_fawltydeps", version = "0.1.0")
local_path_override(
    module_name = "rules_fawltydeps",
    path = "../..",
)

fawltydeps = use_extension("@rules_fawltydeps//fawltydeps/extensions:fawltydeps.bzl", "fawltydeps")
fawltydeps.configure(
    pip_repo = "@py_deps",
)
use_repo(fawltydeps, "fawltydeps")

bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "py_deps")
