"""Build file for FawltyDeps rules."""

load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")
load("{pip_repo}//:requirements.bzl", "all_whl_requirements")

exports_files([
    "defs.bzl",
])

py_binary(
    name = "fawltydeps_wrapper",
    srcs = ["fawltydeps_wrapper.py"],
    visibility = ["//visibility:public"],
    deps = ["@fawltydeps_pip//fawltydeps"],
)

py_binary(
    name = "convert_manifest",
    srcs = ["convert_manifest.py"],
    visibility = ["//visibility:public"],
    deps = ["@fawltydeps_pip//pyyaml"],
)

# This rule fetches the metadata for python packages we depend on
modules_mapping(
    name = "modules_mapping.json",
    wheels = all_whl_requirements,
)

genrule(
    name = "manifest",
    srcs = ["modules_mapping.json"],
    outs = ["fawltydeps_mapping.toml"],
    cmd = "$(location :convert_manifest) $< > $@",
    tools = [":convert_manifest"],
    visibility = ["//visibility:public"],
)
