load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":defs.bzl", "offline_bcr", "source_bundle", "versioned_filename_info")

# gazelle:exclude_from_release

package(
    default_visibility = ["//visibility:public"],
)

source_bundle(
    name = "srcs",
    srcs = ["//fawltydeps/private/release/source_files:release_src_files"],
    tags = ["manual"],
)

pkg_tar(
    name = "src_tar",
    srcs = [":srcs"],
    out = "rules_fawltydeps.tar.gz",
    extension = "tar.gz",
    mode = "0755",
    tags = ["manual"],
)

versioned_filename_info(
    name = "versioned_src_tar",
    src = ":src_tar",
    extension = "tar.gz",
    generate_release_notes = True,
    module_name = "rules_fawltydeps",
    tags = ["manual"],
)

offline_bcr(
    name = "bcr",
    src_tars = [
        ":versioned_src_tar",
    ],
)

pkg_tar(
    name = "dist_tar",
    srcs = [
        ":versioned_src_tar",
    ],
    out = "rules_fawltydeps-dist.tar",
    mode = "0755",
    tags = ["manual"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//fawltydeps/private/config:defs",
    ],
)
